--- a/pkg/controller/certificaterequests/vault/BUILD.bazel
+++ b/pkg/controller/certificaterequests/vault/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
+        "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
     ],
 )
