--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -1077,7 +1077,6 @@ spec:
                           type: object
                           required:
                             - role
-                            - secretRef
                           properties:
                             mountPath:
                               description: The Vault mountPath here is the mount path to use when authenticating with Vault. For example, setting a value to `/v1/auth/foo`, will use the path `/v1/auth/foo/login` to authenticate with Vault. If unspecified, the default value "/v1/auth/kubernetes" will be used.
@@ -1094,6 +1093,15 @@ spec:
                                 key:
                                   description: The key of the entry in the Secret resource's `data` field to be used. Some instances of this field may be defaulted, in others it may be required.
                                   type: string
+                                name:
+                                  description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                  type: string
+                            serviceAccountRef:
+                              description: "A reference to a service account that will be used to request a bound token (also known as \"projected token\"). To be able to request a token, the service account token mounted in the cert-manager's Pod must be bound to a role containing the following rule: \n  apiGroups: [\"\"]  resources: [\"serviceaccounts/token\"]  verbs: [\"create\"]"
+                              type: object
+                              required:
+                                - name
+                              properties:
                                 name:
                                   description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                                   type: string
@@ -2260,7 +2268,6 @@ spec:
                           type: object
                           required:
                             - role
-                            - secretRef
                           properties:
                             mountPath:
                               description: The Vault mountPath here is the mount path to use when authenticating with Vault. For example, setting a value to `/v1/auth/foo`, will use the path `/v1/auth/foo/login` to authenticate with Vault. If unspecified, the default value "/v1/auth/kubernetes" will be used.
@@ -2277,6 +2284,15 @@ spec:
                                 key:
                                   description: The key of the entry in the Secret resource's `data` field to be used. Some instances of this field may be defaulted, in others it may be required.
                                   type: string
+                                name:
+                                  description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                  type: string
+                            serviceAccountRef:
+                              description: "A reference to a service account that will be used to request a bound token (also known as \"projected token\"). To be able to request a token, the service account token mounted in the cert-manager's Pod must be bound to a role containing the following rule: \n  apiGroups: [\"\"]  resources: [\"serviceaccounts/token\"]  verbs: [\"create\"]"
+                              type: object
+                              required:
+                                - name
+                              properties:
                                 name:
                                   description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                                   type: string
@@ -3445,7 +3461,6 @@ spec:
                           type: object
                           required:
                             - role
-                            - secretRef
                           properties:
                             mountPath:
                               description: The Vault mountPath here is the mount path to use when authenticating with Vault. For example, setting a value to `/v1/auth/foo`, will use the path `/v1/auth/foo/login` to authenticate with Vault. If unspecified, the default value "/v1/auth/kubernetes" will be used.
@@ -3462,6 +3477,15 @@ spec:
                                 key:
                                   description: The key of the entry in the Secret resource's `data` field to be used. Some instances of this field may be defaulted, in others it may be required.
                                   type: string
+                                name:
+                                  description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                  type: string
+                            serviceAccountRef:
+                              description: "A reference to a service account that will be used to request a bound token (also known as \"projected token\"). To be able to request a token, the service account token mounted in the cert-manager's Pod must be bound to a role containing the following rule: \n  apiGroups: [\"\"]  resources: [\"serviceaccounts/token\"]  verbs: [\"create\"]"
+                              type: object
+                              required:
+                                - name
+                              properties:
                                 name:
                                   description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                                   type: string
@@ -4630,7 +4654,6 @@ spec:
                           type: object
                           required:
                             - role
-                            - secretRef
                           properties:
                             mountPath:
                               description: The Vault mountPath here is the mount path to use when authenticating with Vault. For example, setting a value to `/v1/auth/foo`, will use the path `/v1/auth/foo/login` to authenticate with Vault. If unspecified, the default value "/v1/auth/kubernetes" will be used.
@@ -4647,6 +4670,15 @@ spec:
                                 key:
                                   description: The key of the entry in the Secret resource's `data` field to be used. Some instances of this field may be defaulted, in others it may be required.
                                   type: string
+                                name:
+                                  description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                  type: string
+                            serviceAccountRef:
+                              description: "A reference to a service account that will be used to request a bound token (also known as \"projected token\"). To be able to request a token, the service account token mounted in the cert-manager's Pod must be bound to a role containing the following rule: \n  apiGroups: [\"\"]  resources: [\"serviceaccounts/token\"]  verbs: [\"create\"]"
+                              type: object
+                              required:
+                                - name
+                              properties:
                                 name:
                                   description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                                   type: string
