--- a/internal/apis/acme/v1alpha2/BUILD.bazel
+++ b/internal/apis/acme/v1alpha2/BUILD.bazel
@@ -3,11 +3,17 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "const.go",
         "conversion.go",
         "defaults.go",
         "doc.go",
         "register.go",
+        "types.go",
+        "types_challenge.go",
+        "types_issuer.go",
+        "types_order.go",
         "zz_generated.conversion.go",
+        "zz_generated.deepcopy.go",
         "zz_generated.defaults.go",
     ],
     importpath = "github.com/jetstack/cert-manager/internal/apis/acme/v1alpha2",
