--- a/internal/apis/certmanager/v1alpha3/BUILD.bazel
+++ b/internal/apis/certmanager/v1alpha3/BUILD.bazel
@@ -3,11 +3,18 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "const.go",
         "conversion.go",
         "defaults.go",
         "doc.go",
+        "generic_issuer.go",
         "register.go",
+        "types.go",
+        "types_certificate.go",
+        "types_certificaterequest.go",
+        "types_issuer.go",
         "zz_generated.conversion.go",
+        "zz_generated.deepcopy.go",
         "zz_generated.defaults.go",
     ],
     importpath = "github.com/jetstack/cert-manager/internal/apis/certmanager/v1alpha3",
