--- a/internal/plugin/admission/certificaterequest/approval/BUILD.bazel
+++ b/internal/plugin/admission/certificaterequest/approval/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "@io_k8s_apiserver//pkg/authentication/user:go_default_library",
         "@io_k8s_apiserver//pkg/authorization/authorizer:go_default_library",
         "@io_k8s_client_go//discovery:go_default_library",
+        "@io_k8s_client_go//kubernetes:go_default_library",
     ],
 )
 
