--- a/pkg/issuer/acme/dns/cloudflare/BUILD.bazel
+++ b/pkg/issuer/acme/dns/cloudflare/BUILD.bazel
@@ -5,10 +5,7 @@ go_library(
     srcs = ["cloudflare.go"],
     importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/dns/cloudflare",
     visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/issuer/acme/dns/util:go_default_library",
-        "//pkg/util:go_default_library",
-    ],
+    deps = ["//pkg/issuer/acme/dns/util:go_default_library"],
 )
 
 go_test(
