--- a/pkg/internal/ingress/BUILD.bazel
+++ b/pkg/internal/ingress/BUILD.bazel
@@ -29,10 +29,7 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "convert_test.go",
-        "ingress_test.go",
-    ],
+    srcs = ["ingress_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//pkg/controller:go_default_library",
@@ -43,7 +40,6 @@ go_test(
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
         "@io_k8s_client_go//informers:go_default_library",
         "@io_k8s_client_go//kubernetes/fake:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
