Adds apply helper function for CertificateRequests. Integration for condition map
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -10,6 +10,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//test/integration/acme:all-srcs",
+        "//test/integration/certificaterequests:all-srcs",
         "//test/integration/certificates:all-srcs",
         "//test/integration/conversion:all-srcs",
         "//test/integration/ctl:all-srcs",
